--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "layout.html" %}
+{% block content %}
+    {% for post in posts %}
+        <h1>about Page</h1>
+    {% endfor %}
+{% endblock content %}
+
